Fixed raise size visibility

--- a/src/app/matrix/matrix.component.css
+++ b/src/app/matrix/matrix.component.css
@@ -65,6 +65,7 @@
     float: right;
     color: gray;
     font-size: large;
+    height: 26px;
 }
 
 .highlighted {
